# portpeek

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs  model.rs
src/process/: mod.rs
src/render/: json.rs  mod.rs  table.rs  watch.rs
src/scanner/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: cli_tests.rs  scanner_tests.rs
