[package]
name = "portpeek"
version = "0.1.0"
edition = "2021"
description = "Fast, colorful port inspector. Know who's using your ports in milliseconds."
license = "MIT"
repository = "https://github.com/AbyssWhalen/portpeek"
keywords = ["cli", "port", "network", "debug", "devtools"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.74"
authors = ["portpeek contributors"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
